feat: Student management enhancements - dynamic groups, class/section integration, CSV improvements

--- a/index.html
+++ b/index.html
@@ -815,6 +815,18 @@
                     </select>
                   </div>
                   <div>
+                    <label class="label" for="studentClassInput">ক্লাস*</label>
+                    <select id="studentClassInput" class="form-select" aria-required="true">
+                      <option value="">নির্বাচন করুন</option>
+                    </select>
+                  </div>
+                  <div>
+                    <label class="label" for="studentSectionInput">শাখা*</label>
+                    <select id="studentSectionInput" class="form-select" aria-required="true">
+                      <option value="">নির্বাচন করুন</option>
+                    </select>
+                  </div>
+                  <div>
                     <label class="label" for="studentGroupInput">গ্রুপ</label>
                     <select id="studentGroupInput" class="form-select">
                       <option value="">নির্বাচন করুন</option>
