--- a/index.html
+++ b/index.html
@@ -1588,6 +1588,8 @@
               <div class="text-sm">
                 <div id="sdmName" class="text-lg font-bold"></div>
                 <div id="sdmRoll" class="text-gray-600 dark:text-gray-300"></div>
+                <div id="sdmClass" class="text-gray-600 dark:text-gray-300"></div>
+                <div id="sdmSection" class="text-gray-600 dark:text-gray-300"></div>
                 <div id="sdmGroup" class="text-gray-600 dark:text-gray-300"></div>
                 <div id="sdmAcademic" class="text-gray-600 dark:text-gray-300"></div>
                 <div id="sdmSession" class="text-gray-600 dark:text-gray-300"></div>
