--- a/index.html
+++ b/index.html
@@ -911,6 +911,27 @@
             <div class="card">
               <div class="card-header">নতুন টাস্ক যোগ করুন</div>
               <div class="card-body space-y-4">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                  <div>
+                    <label class="label" for="taskClassInput">ক্লাস</label>
+                    <select id="taskClassInput" class="form-select">
+                      <option value="">ক্লাস নির্বাচন করুন</option>
+                    </select>
+                  </div>
+                  <div>
+                    <label class="label" for="taskSectionInput">শাখা</label>
+                    <select id="taskSectionInput" class="form-select">
+                      <option value="">শাখা নির্বাচন করুন</option>
+                    </select>
+                  </div>
+                  <div>
+                    <label class="label" for="taskSubjectInput">বিষয়</label>
+                    <select id="taskSubjectInput" class="form-select">
+                      <option value="">বিষয় নির্বাচন করুন</option>
+                    </select>
+                  </div>
+                </div>
+
                 <div>
                   <label class="label" for="taskNameInput">টাস্কের নাম*</label>
                   <input
