fix stage multi-teacher dashboard task

--- a/index.html
+++ b/index.html
@@ -709,6 +709,19 @@
                 রিফ্রেশ
               </button>
             </div>
+
+            <!-- Ranking Filters -->
+            <div id="rankingFilters" class="grid grid-cols-1 sm:grid-cols-3 gap-3 mb-4">
+              <select id="rankingClassFilter" class="form-select block w-full rounded-lg border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-sm focus:border-indigo-500 focus:ring-indigo-500 dark:text-white shadow-sm">
+                <option value="">সকল ক্লাস</option>
+              </select>
+              <select id="rankingSectionFilter" class="form-select block w-full rounded-lg border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-sm focus:border-indigo-500 focus:ring-indigo-500 dark:text-white shadow-sm">
+                <option value="">সকল শাখা</option>
+              </select>
+              <select id="rankingSubjectFilter" class="form-select block w-full rounded-lg border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-sm focus:border-indigo-500 focus:ring-indigo-500 dark:text-white shadow-sm">
+                <option value="">সকল বিষয়</option>
+              </select>
+            </div>
             <div id="studentRankingList" class="space-y-4">
               <div class="placeholder-content">
                 <i class="fas fa-spinner fa-spin mr-2"></i>
