--- a/index.html
+++ b/index.html
@@ -231,7 +231,33 @@
         </h1>
       </div>
 
-      <div class="flex items-center space-x-2 sm:space-x-3 md:space-x-4 flex-nowrap">
+      <div class="flex items-center space-x-2 sm:space-x-3 flex-shrink-0">
+        <!-- Desktop Context Info & Filters (Hidden on Mobile) -->
+        <div id="topNavContextContainer" class="hidden md:flex items-center gap-4 mr-4">
+            <!-- Teacher Info -->
+            <div id="topNavTeacherInfo" class="hidden flex items-center gap-2 px-3 py-1.5 rounded-lg bg-indigo-50 dark:bg-indigo-900/30 border border-indigo-100 dark:border-indigo-800/50">
+                <i class="fas fa-chalkboard-teacher text-indigo-600 dark:text-indigo-400 text-xs"></i>
+                <div class="text-xs font-semibold text-indigo-900 dark:text-indigo-200 flex items-center gap-1">
+                    <span id="topNavTeacherName">শিক্ষক</span>
+                    <span class="text-indigo-300 dark:text-indigo-400">|</span>
+                    <span id="topNavContextDetails" class="text-indigo-700 dark:text-indigo-300"></span>
+                </div>
+            </div>
+
+            <!-- Filters -->
+            <div id="topNavFilters" class="hidden flex items-center gap-2">
+                <select id="topNavClassFilter" class="appearance-none bg-gray-50 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 text-gray-700 dark:text-gray-200 text-xs font-medium rounded-md py-1.5 px-2.5 pr-6 focus:outline-none focus:ring-2 focus:ring-indigo-500/50 cursor-pointer transition-colors hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <option value="">সকল ক্লাস</option>
+                </select>
+                <select id="topNavSectionFilter" class="appearance-none bg-gray-50 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 text-gray-700 dark:text-gray-200 text-xs font-medium rounded-md py-1.5 px-2.5 pr-6 focus:outline-none focus:ring-2 focus:ring-indigo-500/50 cursor-pointer transition-colors hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <option value="">সকল শাখা</option>
+                </select>
+                <select id="topNavSubjectFilter" class="appearance-none bg-gray-50 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 text-gray-700 dark:text-gray-200 text-xs font-medium rounded-md py-1.5 px-2.5 pr-6 focus:outline-none focus:ring-2 focus:ring-indigo-500/50 cursor-pointer transition-colors hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <option value="">সকল বিষয়</option>
+                </select>
+            </div>
+        </div>
+
         <button
           id="openProfileModal"
           aria-label="Show developer profile"
