Refine ranking logic, fix dark mode visibility, and adjust student info layout

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
             </div>
 
             <!-- Ranking Filters -->
-            <div id="rankingFilters" class="grid grid-cols-1 sm:grid-cols-3 gap-3 mb-4">
+            <div id="rankingFilters" class="grid grid-cols-1 sm:grid-cols-4 gap-3 mb-4">
               <select id="rankingClassFilter" class="form-select block w-full rounded-lg border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-sm focus:border-indigo-500 focus:ring-indigo-500 dark:text-white shadow-sm">
                 <option value="">সকল ক্লাস</option>
               </select>
@@ -746,6 +746,9 @@
               </select>
               <select id="rankingSubjectFilter" class="form-select block w-full rounded-lg border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-sm focus:border-indigo-500 focus:ring-indigo-500 dark:text-white shadow-sm">
                 <option value="">সকল বিষয়</option>
+              </select>
+              <select id="rankingTaskFilter" class="form-select block w-full rounded-lg border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-sm focus:border-indigo-500 focus:ring-indigo-500 dark:text-white shadow-sm">
+                <option value="">সকল এসাইনমেন্ট</option>
               </select>
             </div>
             <div id="studentRankingList" class="space-y-4">
