--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@
 
           <div id="page-group-policy" class="page space-y-6 hidden mt-6 lg:mt-0">
             <!-- <h2 class="text-2xl font-bold mb-4">গ্রুপ পলিসি</h2> -->
-            <div id="policySections" class="space-y-4">
+            <div id="policySections" class="space-y-4 max-w-6xl mx-auto mt-8">
               <div class="placeholder-content card card-body">
                 <i class="fas fa-spinner fa-spin mr-2"></i>
                 পলিসি লোড হচ্ছে...
