Update dashboard assignment date logic, fix global settings persistence, and general updates

--- a/src/legacy-layout.html
+++ b/src/legacy-layout.html
@@ -159,7 +159,7 @@
                       <th class="px-3 py-2">Name</th>
                       <th class="px-3 py-2">Task</th>
                       <th class="px-3 py-2">Team</th>
-                      <th class="px-3 py-2">Additional</th>
+                      <th class="px-3 py-2">Progress</th>
                       <th class="px-3 py-2">MCQ</th>
                       <th class="px-3 py-2">Total</th>
                       <th class="px-3 py-2">%</th>
@@ -902,9 +902,9 @@
                       />
                     </div>
                     <div>
-                      <label for="maxAdditionalScoreInput" class="label text-xs">????????</label>
+                      <label for="maxProgressScoreInput" class="label text-xs">????????</label>
                       <input
-                        id="maxAdditionalScoreInput"
+                        id="maxProgressScoreInput"
                         type="number"
                         min="0"
                         value="25"
